[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [{name = "Radim Rehurek", email = "me@radimrehurek.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Distributed Computing",
  "Topic :: Database :: Front-Ends"
]
dependencies = ["wrapt"]
description = "Utils for streaming large files (S3, HDFS, GCS, SFTP, Azure Blob Storage, gzip, bz2, zst...)"
dynamic = ["version"]
name = "smart_open"
readme = "README.rst"
requires-python = ">=3.10,<4.0" # sync with classifiers above
urls = {Repository = "https://github.com/piskvorky/smart_open"}

[project.optional-dependencies]
all = ["smart_open[s3,gcs,azure,http,webhdfs,ssh,zst,lz4]"]
azure = ["azure-storage-blob>=12.7.0", "azure-common", "azure-core"]
gcs = ["google-cloud-storage>=2.6.0", "google-api-core<2.28;python_version<'3.10'"] # https://github.com/googleapis/python-api-core/pull/832#issuecomment-3470137771
http = ["requests"]
lz4 = ["lz4"]
s3 = ["boto3>=1.9.17"]
ssh = ["paramiko"]
test = [
  "smart_open[all]",
  "moto[server]",
  "responses",
  "pre-commit",
  "pytest",
  "pytest-rerunfailures",
  "pytest_benchmark",
  "pytest-timeout",
  "pytest-xdist[psutil]",
  "awscli",
  "pyopenssl",
  "numpy"
]
webhdfs = ["requests"]
zst = ["backports.zstd>=1.0.0;python_version<'3.14'"]

[tool.pydoclint]
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = false
check-return-types = false
check-yield-types = false
style = "google"

[tool.pytest.ini_options]
addopts = [
  # extra test summary info: all except passed
  "-r=a",
  # https://pytest-xdist.readthedocs.io/en/latest/distribution.html
  # "--numprocesses=logical",
  "--numprocesses=0", # disabled for now, it was flaky
  "--dist=worksteal",
  "--max-worker-restart=8",
  # https://github.com/pytest-dev/pytest-timeout
  "--timeout=60",
  "--timeout-method=thread"
]

[tool.ruff]
line-length = 110 # historical smart_open style
output-format = "concise"

[tool.ruff.lint]
ignore = [
  "ANN", # we don't enforce type hints
  "D107", # we have pydoclint with class docstring
  "D203", # there is D211
  "D213", # there is D212
  "TRY003", # there is EM102
  "FIX002", # there is TD002,TD003
  "TC003", # clutters
  "PLC0415", # local imports are necessary for optional dependencies
  "COM812", # conflicts with ruff format
  "E501", # line length handled by ruff-format
  "E731", # lambda assignment is widely used in smart_open
  "T20", # print/pprint legitimate in scripts and helpers
  "A001", "A002", "A004", # smart_open intentionally shadows the builtin `open`
  "EM101", "EM102", # plain strings inside exception constructors are fine
  "PLR0913", # smart_open public APIs have many transport-layer kwargs by design
  "C901", # legacy functions can be complex, refactor in dedicated PRs
  "PLR2004", # magic value comparisons are clearer than named constants in many places
  "RUF001", # ambiguous unicode chars are intentional in test fixtures
  "PTH", # os.path is widely used; pathlib migration is a separate effort
  "S101", # assert is used outside tests too
  "S105", "S106", "S107", # hardcoded "password"-named kwargs are not secrets
  "S108", # /tmp paths in tests/integration scripts are fine
  "S113", # request timeouts in test scripts are fine
  "S311", # pseudo-random in tests is fine
  "S603", "S607", # subprocess invocations in ci_helpers are fine
  "ERA001", # commented-out code is sometimes intentional
  "LOG015", # root logger calls in scripts are fine
  "N806", # some variables are intentionally uppercase
  "N801", "N802", "N803", "N812", "N818", # legacy names match unittest/external APIs
  "RET504", # explicit-assign-before-return is sometimes clearer
  "SLF001", # private member access is used to glue smart_open's transports
  "ARG001", "ARG002", "ARG005", # io.IOBase overrides keep interface args even when unused
  "FBT002", "FBT003", # boolean kwargs/positional flags exist in the public API
  "SIM115", "SIM117", # legacy context-manager patterns are clearer in places
  "SIM105", "SIM108", # readability over conciseness
  "BLE001", # bare except: is intentional in a couple of fallback paths
  "TRY300", "TRY301", "TRY401", # try/except style is widely varied across smart_open
  "PT012", "PT028", # legacy pytest patterns
  "PERF203", "PERF401", # micro-perf rewrites are out of scope here
  "G004", # f-string in log message is fine
  "DTZ005", # naive datetime in release scripts is intentional
  "S321", # ftplib usage is the whole point of smart_open/ftp.py
  "PLR0912", # legacy functions can be branchy, refactor in dedicated PRs
  "PLW0127", "PLW0128", # legacy self-assignment patterns in compatibility shims
  "PGH004", # `# noqa` without a code is grandfathered in
  "PYI024", # collections.namedtuple is fine in legacy public APIs
  "S507", # paramiko AutoAddPolicy is a documented smart_open ssh default
  "EXE001" # shebang on release scripts is informational
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"**/tests/**/*.py" = [
  "D100", # tests is not a package
  "D101", "D102", "D103", # test classes/methods/functions don't need docstrings
  "D104", # tests modules don't need docstrings
  "INP001", # tests dir is intentionally not a namespace package
  "PT006", "PT009", "PT011", "PT027", # legacy unittest-style patterns survive in this test suite
  "PT013", # `import pytest as pt` shorthand
  "PYI024", # collections.namedtuple usage in tests
  "RUF012", # mutable class attributes in mock fixtures
  "S324", # md5 in tests is fine
  "S507", # paramiko AutoAddPolicy in tests
  "TD002", "TD003" # legacy TODOs in tests
]
"integration-tests/**/*.py" = [
  "D100", "D101", "D102", "D103", "D104",
  "INP001", # not a namespace package
  "PT013" # `import pytest as pt` shorthand
]
"benchmark/**/*.py" = [
  "D100", "D101", "D102", "D103", "D104",
  "INP001" # not a namespace package
]
"ci_helpers/**/*.py" = [
  "D100", "D101", "D102", "D103", "D104",
  "INP001" # not a namespace package
]
"release/**/*.py" = [
  "D100", "D101", "D102", "D103", "D104",
  "INP001" # not a namespace package
]

[tool.ruff.lint.isort]
known-first-party = ["smart_open", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["smart_open"]

[tool.setuptools_scm]
fallback_version = "0.1.dev0+gitnotfound"
