[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [{name = "Radim Rehurek", email = "me@radimrehurek.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Distributed Computing",
  "Topic :: Database :: Front-Ends"
]
dependencies = ["wrapt"]
description = "Utils for streaming large files (S3, HDFS, GCS, SFTP, Azure Blob Storage, gzip, bz2, zst...)"
dynamic = ["version"]
name = "smart_open"
readme = "README.rst"
requires-python = ">=3.10,<4.0" # sync with classifiers above
urls = {Repository = "https://github.com/piskvorky/smart_open"}

[project.optional-dependencies]
all = ["smart_open[s3,gcs,azure,http,webhdfs,ssh,zst,lz4]"]
azure = ["azure-storage-blob>=12.7.0", "azure-common", "azure-core"]
gcs = ["google-cloud-storage>=2.6.0", "google-api-core<2.28;python_version<'3.10'"] # https://github.com/googleapis/python-api-core/pull/832#issuecomment-3470137771
http = ["requests"]
lz4 = ["lz4"]
s3 = ["boto3>=1.9.17"]
ssh = ["paramiko"]
test = [
  "smart_open[all]",
  "moto[server]",
  "responses",
  "pre-commit",
  "pytest",
  "pytest-rerunfailures",
  "pytest_benchmark",
  "pytest-timeout",
  "pytest-xdist[psutil]",
  "awscli",
  "pyopenssl",
  "numpy"
]
webhdfs = ["requests"]
zst = ["backports.zstd>=1.0.0;python_version<'3.14'"]

[tool.pydoclint]
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = false
check-return-types = false
check-yield-types = false
style = "google"

[tool.pytest.ini_options]
addopts = [
  # extra test summary info: all except passed
  "-r=a",
  # https://pytest-xdist.readthedocs.io/en/latest/distribution.html
  # "--numprocesses=logical",
  "--numprocesses=0", # disabled for now, it was flaky
  "--dist=worksteal",
  "--max-worker-restart=8",
  # https://github.com/pytest-dev/pytest-timeout
  "--timeout=60",
  "--timeout-method=thread"
]

[tool.ruff]
line-length = 110 # historical smart_open style
output-format = "concise"

[tool.ruff.lint]
ignore = [
  "ANN", # we don't enforce type hints
  "D107", # we have pydoclint with class docstring
  "D203", # there is D211
  "D213", # there is D212
  "TRY003", # there is EM102
  "FIX002", # there is TD002,TD003
  "TC003", # clutters
  "PLC0415", # local imports are necessary for optional dependencies
  "COM812", # conflicts with ruff format
  "E501", # line length handled by ruff-format
  "E731", # lambda assignment is widely used in smart_open
  "A001", "A002", "A004", # smart_open intentionally shadows the builtin `open`
  "ARG002", # io.IOBase overrides keep interface args even when unused
  "C901", "PLR0912", "PLR0913", # legacy functions can be complex/branchy; refactor in dedicated PRs
  "FBT002", # boolean kwargs are part of smart_open's public APIs
  "N818", # WebHdfsException is a public name; renaming is a breaking change
  "PTH", # os.path is widely used; pathlib migration is a separate effort
  "S101", # `assert` is used as a precondition check on parsed URIs across transports
  "SLF001" # private-member access is used to glue smart_open's transports
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
# tests deliberately use unittest-style patterns, reach into private state,
# carry security-warning-flagged fixtures, and don't ship docstrings
"**/tests/**/*.py" = [
  "ARG001", # unused fn args common in pytest fixtures
  "BLE001", # bare `except Exception` is fine for "did it raise anything?" assertions
  "D10", # missing docstrings
  "ERA001", # commented-out code in tests is often a TODO marker
  "FBT003", # boolean positionals in mock calls
  "G004", # f-strings in log messages are fine
  "INP001", # tests dir is intentionally not a namespace package
  "LOG015", # root logger in tests is fine
  "N801", "N802", "N803", "N806", "N812", # CamelCase unittest setUp/tearDown and intentional uppercase vars
  "PERF", # micro-performance rewrites are out of scope in tests
  "PLR2004", # magic numbers in tests are clearer than constants
  "PLW0127", "PLW0128", # legacy self-assignment patterns
  "PT006", "PT009", "PT011", "PT012", "PT013", "PT027", "PT028", # legacy unittest patterns
  "PYI024", # collections.namedtuple in fixtures
  "RUF001", # ambiguous unicode chars in string fixtures
  "RUF012", # mutable class attributes in mock fixtures
  "S101", # assert is the whole point of tests
  "S105", "S106", "S107", # hardcoded "password"-named kwargs in fixtures
  "S108", # /tmp paths in tests
  "S113", # request timeouts in tests
  "S311", # pseudo-random in tests
  "S324", # md5 in tests is fine
  "S507", # paramiko AutoAddPolicy in ssh tests
  "S603", "S607", # subprocess in test helpers
  "SIM105", "SIM108", "SIM115", "SIM117", # context-manager patterns in test setup
  "T20", # print in tests is fine
  "TD002", "TD003", # legacy TODOs in tests
  "TRY300", "TRY301", "TRY401" # try/except patterns in tests
]
# scripts and helpers under these dirs aren't packages and frequently print
"{integration-tests,benchmark,ci_helpers,release}/**/*.py" = [
  "ARG001", # ssh integration tests pass unused args to paramiko shims
  "D10", # missing docstrings
  "DTZ005", # naive datetime in release scripts is intentional
  "ERA001", # commented-out code is sometimes intentional in scripts
  "EXE001", # shebang on release scripts is informational
  "INP001", # not a namespace package
  "LOG015", # root logger in scripts is fine
  "N806", # uppercase locals (B_CLRF, ONE_MIB, ...) are intentional
  "PERF", # not a hot path
  "PGH004", # `# noqa` without a code is grandfathered in
  "PLR2004", # magic numbers in scripts are fine
  "PT013", # `import pytest as pt` shorthand
  "RUF001", # ambiguous unicode chars in string fixtures
  "S101", # assert is fine in scripts
  "S105", # hardcoded "password"-named kwargs in fixtures
  "S108", # /tmp paths in integration tests
  "S113", # request timeouts in scripts
  "S311", # pseudo-random in scripts
  "S603", "S607", # subprocess invocations in ci_helpers
  "SIM115", "SIM117", # context-manager patterns in scripts
  "T20" # print is the whole point of these helpers
]
# files where a single specific rule is intentional
"smart_open/compression.py" = ["SIM115"] # returns the file object to caller
"smart_open/doctools.py" = ["T20"] # builds docstrings via redirect_stdout
"smart_open/ftp.py" = ["S321"] # ftplib is the whole point of this module
"smart_open/gcs.py" = ["N802"] # Reader/Writer factories named after the classes they return
"smart_open/hdfs.py" = ["S603", "S607"] # invokes the local `hdfs` CLI by design
"smart_open/local_file.py" = ["ARG001"] # transport_params is a required open_uri signature
"smart_open/s3.py" = [
  "ARG001", "ARG005", # interface-conformance args/lambdas for boto3 callbacks
  "PERF203" # retry loop intentionally try/except per attempt
]
"smart_open/smart_open_lib.py" = ["N801", "PYI024"] # patch_pathlib, plus legacy `Uri` namedtuple
"smart_open/ssh.py" = ["S507"] # paramiko AutoAddPolicy is documented behaviour
"smart_open/webhdfs.py" = ["S113"] # WebHDFS requests use server-side timeouts

[tool.ruff.lint.isort]
known-first-party = ["smart_open", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["smart_open"]

[tool.setuptools_scm]
fallback_version = "0.1.dev0+gitnotfound"
