[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=64", "setuptools_scm>=8"]

[project]
authors = [{name = "Radim Rehurek", email = "me@radimrehurek.com"}]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: System :: Distributed Computing",
  "Topic :: Database :: Front-Ends"
]
dependencies = ["wrapt"]
description = "Utils for streaming large files (S3, HDFS, GCS, SFTP, Azure Blob Storage, gzip, bz2, zst...)"
dynamic = ["version"]
name = "smart_open"
readme = "README.md"
requires-python = ">=3.10,<4.0" # sync with classifiers above
urls = {Repository = "https://github.com/piskvorky/smart_open"}

[project.optional-dependencies]
all = ["smart_open[s3,gcs,azure,http,webhdfs,ssh,zst,lz4]"]
azure = ["azure-storage-blob>=12.7.0", "azure-common", "azure-core"]
gcs = ["google-cloud-storage>=2.6.0"]
http = ["requests"]
lz4 = ["lz4"]
s3 = ["boto3>=1.9.17"]
ssh = ["paramiko"]
dev = [
  "smart_open[all]",
  "moto[server]",
  "responses",
  "pre-commit",
  "pytest",
  "pytest-rerunfailures",
  "pytest_benchmark",
  "pytest-timeout",
  "pytest-xdist[psutil]",
  "awscli",
  "pyopenssl",
  "numpy"
]
webhdfs = ["requests"]
zst = ["backports.zstd>=1.0.0;python_version<'3.14'"]

[tool.pydoclint]
arg-type-hints-in-docstring = false
arg-type-hints-in-signature = false
check-return-types = false
check-yield-types = false
style = "google"

[tool.pytest.ini_options]
addopts = [
  # extra test summary info: all except passed
  "-r=a",
  # https://pytest-xdist.readthedocs.io/en/latest/distribution.html
  # "--numprocesses=logical",
  "--numprocesses=0", # disabled for now, it was flaky
  "--dist=worksteal",
  "--max-worker-restart=8",
  # https://github.com/pytest-dev/pytest-timeout
  "--timeout=60",
  "--timeout-method=thread"
]

[tool.ruff]
line-length = 110 # historical smart_open style
output-format = "concise"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
ignore = [
  "ANN", # we don't enforce type hints
  "D107", # we have pydoclint with class docstring
  "D203", # there is D211
  "D213", # there is D212
  "TRY003", # there is EM102
  "FIX002", # there is TD002,TD003
  "TC003", # clutters
  "PLC0415", # local imports are necessary for optional dependencies
  "COM812", # conflicts with ruff format
  "E501", # line length handled by ruff-format
  "A001", "A002", "A004", # smart_open intentionally shadows the builtin `open`
  "ARG002" # io.IOBase overrides keep interface args even when unused
]
select = ["ALL"]

[tool.ruff.lint.extend-per-file-ignores]
"{tests,integration-tests,benchmark,ci_helpers,release}/**/*.py" = [
  "D100", # not a package
  "D104", # modules don't need docstrings
  "INP001", # not a namespace package
  "PLR2004", # magic value comparisons are normal in tests/scripts
  "S101", # assert is the whole point of tests
  "S105", "S106", "S108", # hardcoded passwords/tmp paths are normal in tests/scripts
  "SLF001", # tests/scripts reach into private state of the package they test
  "T20" # print is the whole point of these helpers
]

[tool.ruff.lint.isort]
known-first-party = ["smart_open", "tests"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.setuptools.packages.find]
include = ["smart_open"]

[tool.setuptools_scm]
fallback_version = "0.1.dev0+gitnotfound"
